[tool.poetry]
name = "verset"
version = "0.1.0"
description = "pyprojects.toml dependencies version manager"
authors = ["fdev31 <fdev31@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
verset = 'verset:main'

[tool.poetry.dependencies]
python = "^3.10" # 3.10.10
tomlkit = "^0.11.7" # 0.11.7
# Poetry pre-1.2.x style, understood by Poetry 1.0–1.2
# [tool.poetry.dev-dependencies]
[tool.poetry.group.dev.dependencies]
vulture = "^2.7"
black = "^23.3.0"
mypy = "^1.2.0"
typing-extensions = "^4.5.0"
isort = "^5.12.0"
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
